--- a/app/sass/pages/_start_game.scss
+++ b/app/sass/pages/_start_game.scss
@@ -2,13 +2,16 @@
     position:fixed;
     left:0px;
     top:0px;
-    background:$dl_bg;
+    background:rgba(0,0,0,0.5);
     width:100%;
     height:100%;
+    z-index:100
 }
 .dialog {
     width:100%;
     max-width: $dl_width;
     height:$dl_height;
     background:$dl_bg;
+    margin:auto;
+    padding:2em 1.5em;
 }
