--- a/app/sass/base/_base.scss
+++ b/app/sass/base/_base.scss
@@ -21,6 +21,14 @@ html {
   box-sizing: inherit;
 }
 
+.rel {
+  position: relative;
+}
+
+.cont--center {
+  text-align:center;
+}
+
 /**
  * Basic styles for links
  */
