--- a/app/sass/layout/_score.scss
+++ b/app/sass/layout/_score.scss
@@ -1,6 +1,7 @@
 .ui__wrapper { 
+    display:none;
     position: absolute;
-    left: 500px;
+    right: 0;
     top: 0px;
     width: 140px;
     height: 400px;
