--- a/app/sass/components/_button.scss
+++ b/app/sass/components/_button.scss
@@ -1,3 +1,39 @@
 // -----------------------------------------------------------------------------
 // This file contains all styles related to the button component.
 // -----------------------------------------------------------------------------
+%orange {
+    /* Rectangle [25 122]: */
+    background: #F5A623;
+    // background-image: linear-gradient(-180deg, rgba(0,0,0,0.00) 0%, #000000 100%);
+    border: 1px solid #F5A623;
+    box-shadow: inset -1px -4px 0 0 rgba(0,0,0,0.21);
+    border-radius: 8px;
+    /* Rectangle [25 122]: */
+// background: #F5A623;
+// border: 1px solid #F5A623;
+// box-shadow: inset -1px -7px 0 0 rgba(0,0,0,0.21);
+// border-radius: 8px;
+}
+
+.btn {
+    cursor:pointer;
+    display:inline-block;
+    padding:.4em 1em;
+    font-size:14px;
+    color:white;
+
+    &:hover, &:active {
+
+    }
+    &.txt-center {
+        text-align:center;
+    }
+    &.large {
+        width:240px;
+    }
+}
+
+.btn-start {
+    @extend %orange;
+    width:140px;
+}
