--- a/app/sass/pages/_home.scss
+++ b/app/sass/pages/_home.scss
@@ -4,7 +4,10 @@
 
 .wrapper__canvas {
     position:relative;
-    width:100%;
+    // width:100%;
     max-width:100%;
-    height:0;
+    // height:0;
+}
+#app_game {
+    max-width:100%;
 }
