--- a/app/sass/pages/_start_game.scss
+++ b/app/sass/pages/_start_game.scss
@@ -5,7 +5,8 @@
     background:rgba(0,0,0,0.5);
     width:100%;
     height:100%;
-    z-index:100
+    z-index:100;
+    display:flex;
 }
 .dialog {
     width:100%;
@@ -14,4 +15,27 @@
     background:$dl_bg;
     margin:auto;
     padding:2em 1.5em;
+}
+.dialog--logo {
+    width:100%;
+    height:120px;
+    background: image('logo.png') center center no-repeat;
+    background-size: contain;
+}
+.dialog--title {
+    font-size:20px;
+    color:white;
+
+    p {
+        padding-left:2em;
+    }
+}
+.dl--title-img {
+    width:32px;
+    height:24px;
+    background: image('trofee.png') 0px 0px no-repeat;
+    background-size: contain;
+    position:absolute;
+    left:0px;
+    top:0px;
 }
